add undead power, waste of time